# scriptorian-ai

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  INDEXING.md  INSTALL_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  VIRTUAL_ENV_SETUP.md  install.sh  mcp_config_example.json  pyproject.toml  railway.json  render.yaml  test_mcp.sh  test_mcp_local.json  test_mcp_remote.json
scripts/: index_scriptures.py
src/scriptorian/: __init__.py  __main__.py  data_loader.py  reference_parser.py  search.py  server.py  server_http.py  server_sse.py
tests/: test_reference_parser.py
